--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,15 @@ app:
             BTCUSD=BTC-USD,
             LTCBTC=LTC-BTC,
             XMRBTC=XMR-BTC
+    hitbtc:
+        restBase: "http://localhost:8081/api/2"
+        passphrase: ${HITBTC_PASSPHRASE}
+        publicKey: ${HITBTC_PUBLIC}
+        secretKey: ${HITBTC_SECRET}
+        pairs:
+            BTCUSD=BTC-USD,
+            LTCBTC=LTC-BTC,
+            XMRBTC=XMR-BTC
 debug: true
 logging:
     level: DEBUG
