--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,21 @@ spring:
         serialization:
             fail-on-empty-beans: false
             write_dates_as_timestamps: false
+    activemq:
+        broker-url: ${ESB_AMQ_ADDRESS}
+        non-blocking-redelivery: true
+        pool:
+            block-if-full: true
+            block-if-full-timeout: -1
+            create-connection-on-startup: true
+            enabled: false
+            expiry-timeout: 10000
+            idle-timeout: 30000
+            max-connections: 1
+            maximum-active-session-per-connection: 500
+            reconnect-on-exception: true
+            time-between-expiration-check: -1
+            use-anonymous-producers: true
 server:
     servlet-path: /api
     port: 9999
@@ -42,6 +57,11 @@ app:
             LTCBTC=LTC-BTC,
             XMRBTC=XMR-BTC
         disconnectIfInactiveS: 20
+    jms:
+        queue:
+            create: create
+            manage: manage
+            withdraw: withdraw
 debug: true
 logging:
     level: DEBUG
