Implemented ESB integration (initial phase) and AOP-based rate limiter

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
                 commonsCodec              : "1.9",
                 junit                     : "4.12",
                 mockito                   : "1.10.19",
-                assertJ                   : "3.9.0"
+                assertJ                   : "3.9.0",
+                aspectjOAP                : "1.8.12"
         ]
     }
     dependencies {
@@ -43,10 +44,13 @@ repositories {
 }
 
 dependencies {
+    compile project(":model")
+
     compile "org.projectlombok:lombok"
     compile "org.springframework.boot:spring-boot-configuration-processor"
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-activemq"
+    compile 'org.springframework.boot:spring-boot-starter-aop'
     compile "com.google.guava:guava:${versions.guava}"
     compile "io.reactivex.rxjava2:rxjava:${versions.reactivex}"
     compile "com.github.jacek-marchwicki:JavaWebsocketClient:${versions.wsClient}"
