--- a/model/build.gradle
+++ b/model/build.gradle
@@ -5,8 +5,9 @@ description = 'gtc-tradinggateway-model'
 buildscript {
     ext {
         versions = [
-                lombok: "1.16.16",
-                geronimoJMS: "1.1.1"
+                lombok     : "1.16.16",
+                geronimoJMS: "1.1.1",
+                validator  : "5.4.1.Final"
         ]
     }
     dependencies {
@@ -29,6 +30,7 @@ repositories {
 dependencies {
     compileOnly "org.projectlombok:lombok:${versions.lombok}"
 
+    compile "org.hibernate:hibernate-validator:${versions.validator}"
     compile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${versions.geronimoJMS}"
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
