Implemented getAllBalances so it can be used properly

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,6 +66,7 @@ app:
     jms:
         topic:
             inOut:
+                account: account
                 create: create
                 manage: manage
                 withdraw: withdraw
