--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,14 +64,14 @@ app:
         disconnectIfInactiveS: 20
         ratePerS: 0.17
     wex:
-        restBase: "https://btc-e.com/tapi/"
+        restBase: "https://wex.nz/tapi"
         passphrase: ${WEX_PASSPHRASE}
         publicKey: ${WEX_PUBLIC}
         secretKey: ${WEX_SECRET}
         pairs:
             btc_usd=BTC-USD,
             ltc_btc=LTC-BTC,
-            dsh_btc=DASH-BTC,
+            dsh_btc=DASH-BTC
         ratePerS: 0.17
     jms:
         topic:
