Refactoring to support custom symbols in response

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,6 +72,8 @@ app:
             btc_usd=BTC-USD,
             ltc_btc=LTC-BTC,
             dsh_btc=DASH-BTC
+        customResponseCurrencyMapping:
+            dsh=DASH
         ratePerS: 0.17
     jms:
         topic:
