--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ buildscript {
                 assertJ                   : "3.9.0",
                 aspectjOAP                : "1.8.12",
                 validator                 : "5.4.1.Final",
-                swagger                   : "2.7.0"
+                swagger                   : "2.7.0",
+                tokenBucket               : "1.6"
         ]
     }
     dependencies {
@@ -60,6 +61,7 @@ dependencies {
     compile "com.newrelic.agent.java:newrelic-api:${versions.newRelicAPI}"
     compile "commons-codec:commons-codec:${versions.commonsCodec}"
     compile "org.hibernate:hibernate-validator:${versions.validator}"
+    compile "org.isomorphism:token-bucket:${versions.tokenBucket}"
 
     compile "io.springfox:springfox-swagger2:${versions.swagger}"
     compile "io.springfox:springfox-swagger-ui:${versions.swagger}"
