--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -81,14 +81,15 @@ app:
         restBase: "http://localhost:9090/api"
         publicKey: trade-gateway
         pairs:
-            BTC-USD=BTCUSD
+            BTC-USDT=BTCUSDT
         customResponseCurrencyMapping:
-            Bitcoin=BTC
+            Bitcoin=BTC,
+            Tether=USDT
         ratePerM: 60
     clients:
         # all-clients: binance,wex,hitbtc
         # mocks (need MOCK_ENABLED as true): mock-asia,mock-europe
-        active: mock-asia,mock-europe
+        active: binance,wex,hitbtc
     schedule:
         puppeteerS: 10
     jms:
