--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,6 +53,22 @@ app:
             XMR-BTC=XMRBTC,
             DASH-BTC=DASHBTC
         ratePerM: 60
+    bitfinex:
+        restBase: "https://api.bitfinex.com"
+        wsBase: "wss://api.bitfinex.com/ws/2"
+        passphrase: ${BITFINEX_PASSPHRASE}
+        publicKey: ${BITFINEX_PUBLIC}
+        secretKey: ${BITFINEX_SECRET}
+        pairs:
+            BTC-USD=BTCUSD,
+            LTC-BTC=LTCBTC,
+            XMR-BTC=XMRBTC,
+            DASH-BTC=DASHBTC
+        symbols:
+            BTC=bitcoin,
+            LTC=litecoin,
+            XMR=monero
+        ratePerM: 60
     hitbtc:
         restBase: "https://api.hitbtc.com/api/2"
         wsBase: "wss://api.hitbtc.com/api/2/ws"
@@ -88,7 +104,7 @@ app:
     clients:
         # all-clients: binance,wex,hitbtc
         # mocks (need MOCK_ENABLED as true): mock-asia,mock-europe
-        active: binance,wex,hitbtc
+        active: bitfinex #binance,wex,hitbtc
     schedule:
         puppeteerS: 10
     jms:
