--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,7 @@ buildscript {
                 aspectjOAP                : "1.8.12",
                 validator                 : "5.4.1.Final",
                 swagger                   : "2.7.0",
-                tokenBucket               : "1.6",
-                activeMq                  : "5.15.3"
+                tokenBucket               : "1.6"
         ]
     }
     dependencies {
@@ -54,7 +53,7 @@ dependencies {
 
     compile "org.springframework.boot:spring-boot-configuration-processor"
     compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.boot:spring-boot-starter-activemq"
+    compile "org.springframework.boot:spring-boot-starter-artemis"
     compile 'org.springframework.boot:spring-boot-starter-aop'
     compile "com.google.guava:guava:${versions.guava}"
     compile "io.reactivex.rxjava2:rxjava:${versions.reactivex}"
@@ -63,7 +62,6 @@ dependencies {
     compile "commons-codec:commons-codec:${versions.commonsCodec}"
     compile "org.hibernate:hibernate-validator:${versions.validator}"
     compile "org.isomorphism:token-bucket:${versions.tokenBucket}"
-    compile "org.apache.activemq:activemq-pool:${versions.activeMq}"
 
     compile "io.springfox:springfox-swagger2:${versions.swagger}"
     compile "io.springfox:springfox-swagger-ui:${versions.swagger}"
