--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -128,4 +128,8 @@ app:
         pool:
             core: 10
             max: 50
+    statistics:
+        enabled: true
+        reportIntervalMs: 60000
+        window: 1000
 
