--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,7 +47,8 @@ app:
             BTC-USDT=BTCUSDT,
             LTC-USDT=LTCUSDT,
             ETH-USDT=ETHUSDT
-        ratePerM: 60
+        ratePerM: 30
+        createRatePerM: 30
     bitfinex:
         restBase: "https://api.bitfinex.com"
         wsBase: "wss://api.bitfinex.com/ws/2"
@@ -63,7 +64,8 @@ app:
             BTC=bitcoin,
             LTC=litecoin,
             XMR=monero
-        ratePerM: 60
+        ratePerM: 30
+        createRatePerM: 30
     hitbtc:
         restBase: "https://api.hitbtc.com/api/2"
         wsBase: "wss://api.hitbtc.com/api/2/ws"
@@ -96,7 +98,8 @@ app:
             DASH-LTC=dsh_ltc
         customResponseCurrencyMapping:
             dsh=DASH
-        ratePerM: 60
+        ratePerM: 30
+        createRatePerM: 30
     mock:
         restBase: "http://localhost:9090/api"
         publicKey: trade-gateway
@@ -105,7 +108,8 @@ app:
         customResponseCurrencyMapping:
             Bitcoin=BTC,
             Tether=USDT
-        ratePerM: 60
+        ratePerM: 30
+        createRatePerM: 30
     clients:
         # all-clients: bitfinex,binance,wex,hitbtc
         # mocks (need MOCK_ENABLED as true): mock-asia,mock-europe
