--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -114,10 +114,9 @@ app:
         publicKey: ${HUOBI_PUBLIC}
         secretKey: ${HUOBI_SECRET}
         pairs:
-            BTC-USD=btc_usd,
-            LTC-BTC=ltc_btc,
-            DASH-BTC=dsh_btc,
-            DASH-LTC=dsh_ltc
+            BTC-LTC=btcltc,
+            BTC-DASH=btcdsh,
+            BTC-DASH=btcdash
     mock:
         restBase: "http://localhost:9090/api"
         publicKey: trade-gateway
