--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -117,6 +117,7 @@ app:
             BTC-LTC=btcltc,
             BTC-DASH=btcdsh,
             BTC-DASH=btcdash
+        ratePerM: 60
     mock:
         restBase: "http://localhost:9090/api"
         publicKey: trade-gateway
