--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,14 +39,22 @@ app:
         publicKey: ${BINANCE_PUBLIC}
         secretKey: ${BINANCE_SECRET}
         pairs:
-            # USD is actually tether
             LTC-BTC=LTCBTC,
             XMR-BTC=XMRBTC,
             ETH-BTC=ETHBTC,
+            XRP-BTC=XRPBTC,
+            NEO-BTC=NEOBTC,
+            OMG-BTC=OMGBTC,
+            LSK-BTC=LSKBTC,
+            EOS-BTC=EOSBTC,
+            NANO-BTC=NANOBTC,
+            GAS-BTC=GASBTC,
+            QTUM-BTC=QTUMBTC,
+            ZEC-BTC=ZECBTC,
             DASH-BTC=DASHBTC,
             BTC-USDT=BTCUSDT,
             LTC-USDT=LTCUSDT,
-            ETH-USDT=ETHUSDT
+            ETH-USD=ETHUSDT
         ratePerM: 50
         createRatePerM: 10
     bitfinex:
@@ -73,11 +81,17 @@ app:
         secretKey: ${HITBTC_SECRET}
         pairs:
             # USD is actually usdt
-            BTC-USD=BTCUSD,
-            LTC-BTC=LTCBTC,
+            LTCBTC=LTC-BTC,
             XMR-BTC=XMRBTC,
             ETH-BTC=ETHBTC,
+            XRP-BTC=XRPBTC,
             DASH-BTC=DASHBTC,
+            NEO-BTC=NEOBTC,
+            OMG-BTC=OMGBTC,
+            LSK-BTC=LSKBTC,
+            EOS-BTC=EOSBTC,
+            QTUM-BTC=QTUMBTC,
+            ZEC-BTC=ZECBTC,
             BTC-USDT=BTCUSD,
             LTC-USDT=LTCUSD,
             XMR-USDT=XMRUSD,
@@ -95,7 +109,8 @@ app:
             BTC-USD=btc_usd,
             LTC-BTC=ltc_btc,
             DASH-BTC=dsh_btc,
-            DASH-LTC=dsh_ltc
+            DASH-LTC=dsh_ltc,
+            ZEC-BTC=zec_btc
         customResponseCurrencyMapping:
             dsh=DASH
         ratePerM: 50
@@ -105,15 +120,22 @@ app:
         publicKey: ${HUOBI_PUBLIC}
         secretKey: ${HUOBI_SECRET}
         pairs:
-            BTC-USDT=btcusdt,
-            DASH-BTC=dashbtc,
             LTC-BTC=ltcbtc,
+            ETH-BTC=ethbtc,
             XRP-BTC=xrpbtc,
+            DASH-BTC=dashbtc,
             NEO-BTC=neobtc,
             OMG-BTC=omgbtc,
             LSK-BTC=lskbtc,
+            EOS-BTC=eosbtc,
             GAS-BTC=gasbtc,
-            QTUM-BTC=qtumbtc
+            QTUM-BTC=qtumbtc,
+            ZEC-BTC=zecbtc,
+            BTC-USDT=btcusdt,
+            LTC-USDT=ltcusdt,
+            ETH-USDT=ethusdt,
+            XRP-USDT=xrpusdt,
+            DASH-USD=dashusdt
         ratePerM: 50
         createRatePerM: 10
     mock:
