Added huobi rate limiter with min request separation in seconds

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -136,7 +136,8 @@ app:
             ETH-USDT=ethusdt,
             XRP-USDT=xrpusdt,
             DASH-USD=dashusdt
-        ratePerM: 30
+        ratePerM: 50
+        minRequestSeparationMs: 15
         createRatePerM: 10
     mock:
         restBase: "http://localhost:9090/api"
