--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -100,6 +100,19 @@ app:
             dsh=DASH
         ratePerM: 50
         createRatePerM: 10
+    therocktrading:
+        restBase: "https://api.therocktrading.com"
+        publicKey: ${ROCK_PUBLIC}
+        secretKey: ${ROCK_SECRET}
+        pairs:
+            BTC-USD=btc_usd,
+            LTC-BTC=ltc_btc,
+            DASH-BTC=dsh_btc,
+            DASH-LTC=dsh_ltc
+        customResponseCurrencyMapping:
+            dsh=DASH
+        ratePerM: 50
+        createRatePerM: 10
     mock:
         restBase: "http://localhost:9090/api"
         publicKey: trade-gateway
@@ -113,7 +126,8 @@ app:
     clients:
         # all-clients: bitfinex,binance,wex,hitbtc
         # mocks (need MOCK_ENABLED as true): mock-asia,mock-europe
-        active: bitfinex,binance,wex,hitbtc
+        #active: bitfinex,binance,wex,hitbtc,therocktrading
+        active: therocktrading
     schedule:
         puppeteerS: 10
     jms:
