--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -105,10 +105,10 @@ app:
         publicKey: ${ROCK_PUBLIC}
         secretKey: ${ROCK_SECRET}
         pairs:
-            BTC-USD=btc_usd,
-            LTC-BTC=ltc_btc,
-            DASH-BTC=dsh_btc,
-            DASH-LTC=dsh_ltc
+            BTC-USD=BTCUSD,
+            LTC-BTC=LTCBTC,
+            DASH-BTC=DSHBTC,
+            DASH-LTC=DSHLTC
         customResponseCurrencyMapping:
             dsh=DASH
         ratePerM: 50
